sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:12: error: not found: value lgr
for (i<-0 to lgr-2) {
             ^AlgBubbleSort1:14: error: not found: value lgr
  for(j<-0 to lgr-2) {
              ^AlgBubbleSort1:15: error: missing arguments for method plusPetit in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
    if (plusPetit(j,j+1)=true) {
        ^AlgBubbleSort1:28: error: type mismatch;
 found   : Unit
 required: Boolean
} while (change=true)
               ^